Fix Schemas td vertical alignment.

--- a/src/help/components/entry/styles/api-documentation.module.scss
+++ b/src/help/components/entry/styles/api-documentation.module.scss
@@ -73,5 +73,9 @@
     // :global(.opblock.opblock-post) :global(.opblock-summary-method) {
     //   background: mediumseagreen;
     // }
+
+    :global(table.model tr.property-row td) {
+      vertical-align: bottom;
+    }
   }
 }
